<resources>
    <!--TAMPILAN AWAL -->
    <string name="nama_aplikasi">SIKEPAH</string>
    <string name="detail_nama_aplikasi">PENGEPUL SAMPAH JOGJA</string>
    <string name="login_sebagai">Login Sebagai?</string>
    <string name="login_sebagai_1">Pelanggan</string>
    <string name="logim_sebagai_2">Supir</string>

    <string name="app_name">SIKEPAH</string>
    <string name="PickUp">PickUp</string>
    <string name="Btn_Lanjut">Lanjut</string>


    <!--PELANGGAN -->
    <string name="Login_Header_Pelanggan">Masuk Akun\nPelanggan</string>
    <string name="Register_Header_Pelanggan">Buat Akun\nPelanggan</string>
    <string name="sudah_punya_akun_pelanggan">Sudah punya akun?</string>
    <string name="Masuk_kebuat_akun_pelanggan">Masuk</string>
    <string name="Masuk_pelanggan">Masuk</string>
    <string name="toggle_password_visibility_pelanggan">lihat password</string>
    <string name="belum_punya_akunPelanggan">Belum Punya Akun</string>
    <string name="Buat_akunPelanggan">Buat Akun</string>
    <string name="Verifikasi_Pelanggan">Verifikasi</string>
    <string name="Kode_tidak_terkirimPelanggan">Tidak menerima Kode?</string>
    <string name="Kirim_UlangPelanggan">Kirim Ulang</string>
    <string name="Lupa_PasswordPelanggan">Lupa Kata Sandi</string>
    <string name="Verifikasi_BerhasilPelanggan">Verifikasi Berhasil</string>

    <!--SUPIR -->
    <string name="Login_Header_Supir">Masuk Akun\nSupir</string>
    <string name="Register_Header_Supir">Buat Akun\nSupir</string>
    <string name="sudah_punya_akun_supir">Sudah punya akun?</string>
    <string name="Masuk_kebuat_akun_supir">Masuk</string>
    <string name="Masuk_supir">Masuk</string>
    <string name="toggle_password_visibility_supir">lihat password</string>
    <string name="belum_punya_akunDriver">Belum Punya Akun</string>
    <string name="Buat_akunDriver">Buat Akun</string>
    <string name="Verifikasi_Driver">Verifikasi</string>
    <string name="Kode_tidak_terkirimSupir">Tidak menerima Kode?</string>
    <string name="Kirim_UlangDriver">Kirim Ulang</string>
    <string name="Lupa_PasswordSupir">Lupa Kata Sandi</string>
    <string name="Verifikasi_BerhasilSupir">Verifikasi Berhasil</string>

    <string name="Label_nama_pelanggan">Nama Lengkap</string>
    <string name="Label_email_pelanggan">Email</string>
    <string name="Label_sandi_pelanggan">Kata Sandi</string>

    <string name="Label_nama_supir">Nama Lengkap</string>
    <string name="Label_email_supir">Email</string>
    <string name="Label_sandi_supir">Kata Sandi</string>

    <string name="arrow">Deskripsi untuk ikon panah</string>
    <string name="Punya_akun">Sudah Punya Akun?</string>

    <string name="show_hide_password">show-hide</string>

    <string name="Dashboard_namaAplikasi">SiKepah</string>
    <string name="Label_Email">Email</string>
    <string name="Lupa_Kata_Sandi">Lupa Kata Sandi</string>
    <string name="Deskripsi_LupaKataSandi">Dapatkan kode Verifikasi dari Emailmu!</string>


    <string name="Deskripsi_Verifikasi">Masukan kode Verifikasi yang dikirimkan\ndi-Emailmu!</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checklist_ikon">checklist ikon</string>

    <!-- Jenis Sampah -->
    <string name="Jenis_Sampah">Jenis Sampah</string>
    <string name="SampahPlastik">Plastik</string>
    <string name="SampahKertas_Kardus">Kertas/Kardus</string>
    <string name="SampahLogam">Logam</string>
    <string name="SampahKaca">Kaca</string>
    <string name="SampahElektronik">Elektronik</string>

    <string name="Btn_Plastik">Plastik</string>
    <string name="Btn_Kertas_Kardus">Kertas/Kardus</string>
    <string name="Btn_Logam">Logam</string>
    <string name="Btn_Kaca">Kaca</string>
    <string name="Btn_Elektronik">Elektronik</string>

    <!-- Berat Sampah -->
    <string name="BeratSampah">Masukan Berat Sampah : </string>
    <string name="NoteJenis_Sampah">Boleh memilih lebih dari satu jenis sampah</string>
    <string name="Berat">Berat</string>
    <string name="Berat_KG">Kg</string>

    <string name="LatarCardView">LatarCardView</string>

    <!-- PickUp2 -->
    <string name="Title_Alamat_Penjemputan">Alamat Penjemputan</string>
    <string name="Rumah_Kost">Rumah Kost</string>
    <string name="Kost_Sahabat">Kost Sahabat</string>
    <string name="Ubah_Detail_Alamat">Ubah Detail Alamat</string>
    <string name="Catatan">Catatan</string>
    <string name="Masukan_Informasi_Penjemputan">Masukan Informasi Penjemputan</string>
    <string name="Lama_Lengkap">Nama Lengkap</string>
    <string name="Alamat_PickUp">Alamat</string>
    <string name="Nomor_TeleponPickUp">Nomor Telepon</string>
    <string name="Konfirmasi_PickUp2">Konfirmasi</string>

    <!-- Rincian Pemesanan -->
    <string name="Rincian_Penjemputan">Rincian Penjemputan</string>


</resources>