<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Krem"
    tools:context=".fragments.PickupFragment">

    <!-- Toolbar di bagian atas -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/dashboard_nav"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <!-- TextView untuk judul toolbar -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/PickUp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <!-- CardView untuk CheckBox -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/rounded_rectangled"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <!-- LinearLayout utama -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/hijau_lumut">

            <!-- LinearLayout pertama: Label dan Garis -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="@dimen/_2sdp">

                <!-- TextView untuk label Jenis Sampah -->
                <TextView
                    android:id="@+id/JenisSampah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Jenis_Sampah"
                    android:paddingEnd="@dimen/_16sdp"
                    android:paddingStart="@dimen/_18sdp"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/putih"
                    android:fontFamily="@font/inter_18pt_bold"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <!-- Garis bawah untuk label -->
                <View
                    android:id="@+id/UnderlineJenisSampah"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/putih"
                    android:layout_marginTop="8dp" />

            </LinearLayout>

            <!-- CheckBoxGroup untuk mengelompokkan CheckBox -->
            <LinearLayout
                android:id="@+id/checkBoxGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- CheckBox Plastik -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/TextPlastik"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SampahPlastik"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/putih"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"/>

                    <CheckBox
                        android:id="@+id/CheckBoxPlastik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_rounded"
                        android:contentDescription="@string/Btn_Plastik" />

                </LinearLayout>

                <!-- Garis bawah untuk CheckBox Plastik -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/putih" />

                <!-- CheckBox Kertas/Kardus -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/TextKertas_Kardus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SampahKertas_Kardus"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/putih"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"/>

                    <CheckBox
                        android:id="@+id/CheckBoxKertas_Kardus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_rounded"
                        android:contentDescription="@string/Btn_Kertas_Kardus" />

                </LinearLayout>

                <!-- Garis bawah untuk CheckBox Kertas/Kardus -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/putih"/>

                <!-- CheckBox Logam -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/TextLogam"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SampahLogam"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/putih"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"/>

                    <CheckBox
                        android:id="@+id/CheckBoxLogam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_rounded"
                        android:contentDescription="@string/Btn_Logam" />

                </LinearLayout>

                <!-- Garis bawah untuk CheckBox Logam -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/putih"/>

                <!-- CheckBox Kaca -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/TextKaca"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SampahKaca"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/putih"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"/>

                    <CheckBox
                        android:id="@+id/CheckBoxKaca"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_rounded"
                        android:contentDescription="@string/Btn_Kaca" />

                </LinearLayout>

                <!-- Garis bawah untuk CheckBox Kaca -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/putih"/>

                <!-- CheckBox Elektronik -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="6dp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/TextElektronik"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/SampahElektronik"
                        android:textSize="@dimen/_16ssp"
                        android:textColor="@color/putih"
                        android:layout_weight="1"
                        android:fontFamily="@font/poppins_medium"/>

                    <CheckBox
                        android:id="@+id/CheckBoxElektronik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_rounded"
                        android:contentDescription="@string/Btn_Elektronik" />

                </LinearLayout>

                <!-- Garis bawah untuk CheckBox Elektronik -->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/putih"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Layout untuk Input Berat Sampah -->
    <LinearLayout
        android:id="@+id/layoutWeightInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewCheckBox"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:padding="16dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        android:backgroundTint="@color/hijau_lumut">

        <!-- TextView untuk Label -->
        <TextView
            android:id="@+id/weightLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BeratSampah"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/putih"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/inter_18pt_bold"/>

        <!-- EditText untuk Input Berat Sampah -->
        <EditText
            android:id="@+id/inputWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:hint="@string/Berat"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/rounded_rectangled"
            android:textColor="@color/putih"
            android:textColorHint="@color/Putih_pudar"
            android:gravity="center_horizontal"
            tools:ignore="TouchTargetSizeCheck"/>

        <!-- TextView untuk Satuan "kg" -->
        <TextView
            android:id="@+id/KgText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Berat_KG"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/putih"
            android:gravity="center"
            android:fontFamily="@font/inter_18pt_bold" />

    </LinearLayout>

    <!-- Tombol "Lanjut" -->
    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutWeightInput"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_centerHorizontal="true"
        android:paddingStart="@dimen/_32sdp"
        android:paddingEnd="@dimen/_32sdp"
        android:background="@drawable/rounded_dashboard"
        android:text="@string/Btn_Lanjut"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_semibold"/>

</RelativeLayout>
